# pqc-pake

./: .env  .gitignore  CMakeLists.txt  Dockerfile  env.sh
.devcontainer/: devcontainer.json
scripts/: build.sh  ntt_init.sh  rkem_init.sh  test.sh
src/: CMakeLists.txt  kem.c  kem.h  main.c  test.c  test.h
src/kyber/: CMakeLists.txt  cbd.c  cbd.h  fips202.c  fips202.h  indcpa.c  indcpa.h  kyber.c  kyber.h  ntt.c  ntt.h  params.h  poly.c  poly.h  polyvec.c  polyvec.h  randombytes.c  randombytes.h  reduce.c  reduce.h  symmetric-shake.c  symmetric.h  verify.c  verify.h
src/pqc-pake/: CMakeLists.txt  kem.c  kem.h  nice.c  nice.h  nice_pake.c  nice_pake.h  nice_pake_re.c  nice_pake_re.h  nice_re.c  nice_re.h  rkem.c  rkem.h  tempo.c  tempo.h  tempo_internal.c  tempo_internal.h  tempo_internal_test.c  tempo_re.c  tempo_re.h
src/rkem/: CMakeLists.txt  Makefile  cbd.c  cbd.h  ntt.c  ntt.h  ntt_init.c  ntt_test.c  params.h  poly.c  poly.h  poly_test.c  polyvec.c  polyvec.h  polyvec_test.c  randombytes.c  randombytes.h  reduce.c  reduce.h  rkem.c  rkem.h  rkem_init.c  rkem_internal.c  rkem_internal.h  test_utils.c  test_utils.h  xrkem.c  xrkem.h  yrkem.c  yrkem.h
tests/: exchange.c  exchange.h  exchange_speed.c  exchange_test.c  gen_matrix_speed.c  kem.c  kyber_sample_ntt_iter.c  kyber_sample_ntt_iter.json  kyber_sample_ntt_iter.py  nice.c  nice_pake.c  nice_pake_re.c  rkem.c  tempo.c  tempo_fls_iter.c  tempo_fls_iter.json  tempo_fls_iter.py  tempo_fls_iter_chart.py  tempo_flsx.c  tempo_re.c  test.c  test.h
